tests/ui/issues/issue-23544.stderr
error[E0229]: associated type bindings are not allowed here
  --> $DIR/issue-23544.rs:5:17
   |
LL |         where T<Bogus = Self::AlsoBogus>: A;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^ associated type not allowed here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0229`.
